--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,12 @@
 @media screen and (max-width: 600px) {
-    
+    header{
+        padding: 10px;
+    }
+    .header-container{
+        flex-direction: column;
+    }
+    .header-who{
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
 }
