--- a/styles/style.css
+++ b/styles/style.css
@@ -10,17 +10,20 @@
 
 
 body {
-    max-width: 1280px;
-    margin: 0 auto;
     font-family: "PT Serif", "Poppins", sans-serif;
     color: #000000;
 }
+
 /* End of Common styles */
 
 /* header section */
+.header{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 .header-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 50px;
     margin-bottom: 100px;
 }
@@ -47,4 +50,58 @@ body {
     font-weight: 400;
     line-height: 28px;
 }
+
 /* End of header section */
+
+/* crew-introduce section */
+.crew{
+    margin-bottom: 100px;
+}
+.crew-container{
+    display:grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 60px;
+    /* display: flex; */
+}
+.crew-group{
+}
+
+.crew-01 {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+}
+
+.crew-01 img {
+    width: 90%;
+}
+
+.crew-desg {
+    position: absolute;
+    left: 80%;
+    top: 12%;
+}
+
+.crew-desg p {
+    transform: rotate(90deg);
+    width: 130px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family:PT Serif;
+}
+.crew-group h3{
+    font-size: 20px;
+    font-weight: 700;
+    font-family:poppins;
+    margin-top: 15px;
+}
+.middle-img{
+    margin-top: 30%;
+}
+footer{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    color: #A9A9A9;
+}
